[package]
name = "dns-bpfprobe"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = "1.3"
redbpf-probes = "1.3"
# dnsparse = "0.1.1"
# binread = "1.4.1"

# [patch.crates-io]
# dnsparse = { git = 'https://github.com/lberezy/dnsparse' }

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "dns_answer"
path = "src/dns_answer/main.rs"
required-features = ["probes"]
